# avi-faucet

./: .env.example  Cargo.toml  README.md  SKILL.md  config.json  index.js  package-lock.json  package.json
src/: main.rs
